CSS margin improvements

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,8 @@
 
 @import "settings";
 
+@import "_mixins";
+
 @import "_components/adsense";
 @import "_components/base";
 @import "_components/content";
