--- a/layouts/shortcodes/speakerdeck.html
+++ b/layouts/shortcodes/speakerdeck.html
@@ -1,7 +1,9 @@
-<script
-  async
-  class="speakerdeck-embed"
-  data-id="{{ .Get 0 }}"
-  data-ratio="1.33333333333333"
-  src="//speakerdeck.com/assets/embed.js"
-></script>
+<div class="speakerdeck">
+  <script
+    async
+    class="speakerdeck-embed"
+    data-id="{{ .Get 0 }}"
+    data-ratio="1.33333333333333"
+    src="//speakerdeck.com/assets/embed.js"
+  ></script>
+</div>
