--- a/src/styles/_components/content.scss
+++ b/src/styles/_components/content.scss
@@ -20,15 +20,17 @@ body {
         text-align: justify;
 
         blockquote {
+          @include element-margin($itemMargin, false, true);
+
           border-left: 0.3rem $color-silver solid;
           font-style: italic;
-          margin: $itemMargin auto;
           width: 60%;
           padding: 1rem;
         }
 
         figure {
-          margin: $itemMargin*2 auto;
+          @include element-margin($itemMargin, false, true);
+
           padding: 0;
           position: relative;
 
@@ -55,64 +57,51 @@ body {
           }
 
           figcaption {
-            //bottom: 0;
-            //box-sizing: border-box;
-            //color: #fff;
-            //background: #000;
-            //left: 0;
-            //opacity: 0.7;
-            font-weight: bold;
-            //padding: 0.7rem;
-            //position: absolute;
+            font-size: 0.8rem;
+            font-style: italic;
             text-align: center;
-            //width: 100%;
           }
         }
 
         h1 {
           font-size: 2.5rem;
-          margin: $itemMargin*1.5 0 $itemMargin 0;
+          margin: $itemMargin*1.5 0 $itemMargin*0.6 0;
         }
 
         h2 {
           font-size: 2rem;
-          //margin: $itemMargin 0 $itemMargin/2 0;
-          margin: $itemMargin*1.4 0 $itemMargin*0.9 0;
+          margin: $itemMargin*1.4 0 $itemMargin*0.5 0;
         }
 
         h3 {
           font-size: 1.5rem;
-          margin: $itemMargin*1.3 0 $itemMargin*0.8 0;
-          //margin: $itemMargin 0 $itemMargin/2 0;
+          margin: $itemMargin*1.3 0 $itemMargin*0.4 0;
         }
 
         h4 {
           font-size: 1rem;
-          margin: $itemMargin*1.2 0 $itemMargin*0.7 0;
-          //margin: $itemMargin 0 $itemMargin/2 0;
+          margin: $itemMargin*1.2 0 $itemMargin*0.3 0;
         }
 
         h5 {
           font-size: 0.8rem;
-          margin: $itemMargin*1.1 0 $itemMargin*0.6 0;
-          //margin: $itemMargin 0 $itemMargin/2 0;
+          margin: $itemMargin*1.1 0 $itemMargin*0.2 0;
         }
 
         h6 {
           font-size: 0.6rem;
-          margin: $itemMargin 0 $itemMargin*0.5 0;
-          //margin: $itemMargin 0 $itemMargin/2 0;
+          margin: $itemMargin 0 $itemMargin*0.1 0;
         }
 
         iframe.instagram-media {
-          margin: $itemMargin auto !important;
+          @include element-margin($itemMargin, true, true);
         }
 
         img {
+          @include element-margin($itemMargin, false, true);
+
           display: block;
           height: auto;
-          margin: $itemMargin auto;
-          //margin: 4rem auto;
           max-width: 100%;
 
             &.full {
@@ -126,51 +115,31 @@ body {
         }
 
         video {
+          @include element-margin($itemMargin, false, true);
+
           display: block;
-          margin: 4rem auto;
           width: 100%
         }
 
-        //.youtube {
-        //  border: 0;
-        //  top: 0;
-        //  left: 0;
-        //  width: 100%;
-        //  height: 100%;
-        //  position: absolute;
-        //
-        //  iframe {
-        //    border: 0;
-        //    top: 0;
-        //    left: 0;
-        //    width: 100%;
-        //    height: 100%;
-        //    position: absolute;
-        //  }
-        //
-        //}
-
         ol {
-          margin: $itemMargin 0;
+          @include element-margin($itemMargin, false, false);
+
           padding: 0 0 0 20px;
         }
 
         p {
-          margin-bottom: $itemMargin;
+          margin: $itemMargin*0.2 0 $itemMargin*0.5 0;
 
           code {
             background-color: $color-white-smoke;
             color: $color-indian-red;
             padding: 0.2rem 0.3rem;
           }
-
-          img {
-            //margin: 3rem auto;
-          }
         }
 
         pre {
-          margin: $itemMargin auto;
+          @include element-margin($itemMargin, false, true);
+
           background-color: $color-dark-slate-gray;
           color: $color-light-gray;
           display: grid;
@@ -182,14 +151,14 @@ body {
             background-color: $color-dark-slate-gray;
             font-size: $base-font-size * 0.8;
             min-width: 0;
-            //width: 50vw; // FIXME: Ugly hack for Firefox? The code tag is widther that window.
           }
         }
 
         table:not(.highlight) {  // disable for table inside Github gist
+          @include element-margin($itemMargin, false, true);
+
           border-collapse: collapse;
           border-style: hidden;
-          margin: $itemMargin 0;
           width: 100%;
 
           thead {
@@ -216,7 +185,8 @@ body {
         }
 
         ul {
-          margin: $itemMargin 0;
+          @include element-margin($itemMargin, false, false);
+
           padding: 0 0 0 20px;
 
           &.task-list {
@@ -226,20 +196,33 @@ body {
         }
 
         .gist {
-          margin: $itemMargin 0;
+          @include element-margin($itemMargin, false, true);
+        }
+
+        .speakerdeck {
+           @include element-margin($itemMargin, false, true);
         }
 
         .twitter-tweet {
-          margin: $itemMargin auto !important;
+          @include element-margin($itemMargin, true, true);
 
           @media (max-width: 550px) {
             width: 0 !important;
           }
         }
+
+        .vimeo {
+           @include element-margin($itemMargin, false, true);
+        }
+
+        .youtube {
+           @include element-margin($itemMargin, false, true);
+        }
       }
 
       footer {
-        margin: $itemMargin 0;
+        @include element-margin($itemMargin, false, false);
+
         text-align: center;
 
         .meta {
@@ -271,7 +254,7 @@ body {
         }
 
         #disqus_thread {
-          margin: $itemMargin 0;
+          @include element-margin($itemMargin, false, true);
         }
       }
     }
