--- a/layouts/shortcodes/image.html
+++ b/layouts/shortcodes/image.html
@@ -65,8 +65,8 @@
               {{ ($.Scratch.Get "resize_480").RelPermalink }} 480w,
               {{ ($.Scratch.Get "resize_768").RelPermalink }} 768w,
               {{ ($.Scratch.Get "resize_1024").RelPermalink }} 1024w,
-              {{ ($.Scratch.Get "resize_1280").RelPermalink }} 1280w
-              {{ ($.Scratch.Get "resize_1600").RelPermalink }} 1600w
+              {{ ($.Scratch.Get "resize_1280").RelPermalink }} 1280w,
+              {{ ($.Scratch.Get "resize_1600").RelPermalink }} 1600w,
               {{ ($.Scratch.Get "resize_1920").RelPermalink }} 1920w
             "
             {{ if ($title) }}alt="{{ $title }}"{{ end }}
@@ -81,8 +81,8 @@
             {{ ($.Scratch.Get "resize_480").RelPermalink }} 480w,
             {{ ($.Scratch.Get "resize_768").RelPermalink }} 768w,
             {{ ($.Scratch.Get "resize_1024").RelPermalink }} 1024w,
-            {{ ($.Scratch.Get "resize_1280").RelPermalink }} 1280w
-            {{ ($.Scratch.Get "resize_1600").RelPermalink }} 1600w
+            {{ ($.Scratch.Get "resize_1280").RelPermalink }} 1280w,
+            {{ ($.Scratch.Get "resize_1600").RelPermalink }} 1600w,
             {{ ($.Scratch.Get "resize_1920").RelPermalink }} 1920w
           "
           {{ if $title }}alt="{{ $title }}"{{ end }}
