--- a/src/styles/_components/base.scss
+++ b/src/styles/_components/base.scss
@@ -1,9 +1,10 @@
 html, body {
   background-color: $base-background-color;
   color: $base-font-color;
-  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: $base-font-size;
   line-height: $base-line-height;
+  text-rendering: optimizeLegibility;
 }
 
 body {
