--- a/src/styles/_components/base.scss
+++ b/src/styles/_components/base.scss
@@ -33,7 +33,7 @@ body {
     flex: 1;
     margin: 0 auto;
     max-width: 900px;
-    padding: $navbar-height+2rem 1rem;
+    padding: $navbar-height+2rem 1rem 2rem 1rem;
     width: 100%;
   }
 }
