--- a/src/styles/_components/homepage.scss
+++ b/src/styles/_components/homepage.scss
@@ -1,6 +1,8 @@
 body {
   main {
     .homepage-avatar {
+      @include element-margin($itemMargin, false, false);
+
       border-radius: 50%;
     }
 
