--- a/src/styles/_components/adsense.scss
+++ b/src/styles/_components/adsense.scss
@@ -1,3 +1,3 @@
 ins.adsbygoogle {
-  @include element-margin($itemMargin, false, true);
+  @include element-margin($itemMargin * 2, false, true);
 }
