Replace Webpack with Hugo Pipes :tada:

--- a/assets/src/styles/_components/content.scss
+++ b/assets/src/styles/_components/content.scss
@@ -18,7 +18,7 @@ body {
       }
 
       section {
-        text-align: justify;
+        // text-align: justify;
 
         blockquote {
           @include element-margin($itemMargin * 2, false, true);
