--- a/assets/src/styles/styles.scss
+++ b/assets/src/styles/styles.scss
@@ -1,5 +1,5 @@
-@import "~normalize.css/normalize";
-@import "~baguettebox.js/src/baguetteBox.scss";
+// @import "typi/scss/typi";
+@import "baguetteBox.js/src/baguetteBox";
 
 @import "settings";
 
