--- a/assets/src/styles/_components/base.scss
+++ b/assets/src/styles/_components/base.scss
@@ -4,13 +4,22 @@ html, body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: $base-font-size;
   line-height: $base-line-height;
+  height: 100%;
+  margin: 0;
   text-rendering: optimizeLegibility;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+  display: grid;
+  grid-gap: 1rem;
+  height: 100%;
+  grid-template-columns: 1fr;
+  grid-template-areas: "nav" "main" "footer";
+
+  grid-template-rows: 5rem 1fr 3rem;
+  @media screen and (max-width: $breakpoint) {
+    grid-template-rows: 5rem 1fr 6rem;
+  }
 
   a {
     color: $links-color;
@@ -28,12 +37,19 @@ body {
     height: 0;
   }
 
+  nav {
+    grid-area: nav;
+  }
+
   main {
-    box-sizing: border-box;
-    flex: 1;
-    margin: 0 auto;
+    grid-area: main;
+    justify-self: center;
+    grid-column: 1 / -1;
     max-width: 900px;
-    padding: $navbar-height+1rem 1rem 2rem 1rem;
-    width: 100%;
+    width: 90%;
+  }
+
+  footer {
+      grid-area: footer;
   }
 }
