--- a/assets/src/styles/_components/homepage.scss
+++ b/assets/src/styles/_components/homepage.scss
@@ -11,7 +11,7 @@ body {
         background-color: $color-silver;
         display: inline-block;
         height: 20px;
-        margin: 0.1rem 0;
+        margin: 0.1rem;
         padding: 5px;
         width: 20px;
 
@@ -51,6 +51,9 @@ body {
         }
         &.rss {
           background-color: #FFA500;
+        }
+        &.gitlab {
+          background-color: #E24329;
         }
       }
     }
