--- a/assets/src/styles/_settings.scss
+++ b/assets/src/styles/_settings.scss
@@ -22,3 +22,27 @@ $navbar-icon-color: $color-black;
 $navbar-text-color: $color-black;
 
 $links-color: $color-brilliant-azure;
+
+// $breakpoints: (
+//   small: 600px,
+//   large: 1200px
+// );
+
+// $typi: (
+//   base: (
+//     null: (16px, 1.4),
+//     small: (18px),
+//     large: (20px)
+//   ),
+//   h1: (
+//     null: (24px, 1.3),
+//     small: (2.369em, 1.2),
+//   )
+//   // Other font maps here
+// );
+
+// @include typi-init;
+
+// h1 {
+//   @include typi('h1');
+// }
