--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="{{ or .Params.language .Site.LanguageCode }}">
-  <head>
-    {{ partial "head.html" . }}
-  </head>
+  {{ partial "head.html" . }}
   <body>
     {{ partial "navbar.html" . }}
     <main>
       {{ block "main" . -}}{{- end }}
     </main>
     {{ partial "footer.html" . }}
-    <script src="{{ print "/assets/js/" $.Site.Data.assets.main.js | relURL }}"></script>
+    <!-- JS -->
+    {{ $baguetteBox := resources.Get "/node_modules/baguetteBox.js/src/baguetteBox.js" }}
+    {{ $headroom := resources.Get "/node_modules/headroom.js/dist/headroom.js" }}
+    {{ $lazyload := resources.Get "/node_modules/vanilla-lazyload/dist/lazyload.js" }}
+    {{ $main := resources.Get "/src/scripts/main.js" }}
+    {{ $scripts := slice $baguetteBox $headroom $lazyload $main | resources.Concat "assets/js/scripts.js" | resources.Minify }}
+    <script src="{{ $scripts.Permalink }}"></script>
     {{ template "_internal/google_analytics_async.html" . }}
   </body>
 </html>
