--- a/assets/src/styles/_components/elements.scss
+++ b/assets/src/styles/_components/elements.scss
@@ -1,20 +1,26 @@
-ol.decimal-list {
+ul.posts-list {
   list-style: none;
-  counter-reset: li;
 
   li {
-    counter-increment: li;
-
-    &::before {
-      content: counter(li, decimal);
+    .date {
       color: $color-silver;
-      direction: rtl;
-      display: inline-block;
-      font-size: 0.8rem;
-      margin-left: -1.5rem;
-      margin-right: 0.5rem;
-      text-align: right;
-      width: 1rem;
+      font-size: 0.8em;
+      display: block;
+    }
+
+    .lang {
+      color: $color-silver;
+      font-size: 0.7em;
+      text-transform: uppercase;
+
+      a {
+        color: $color-silver;
+        text-decoration: none;
+
+        &:hover, &:active, &:visited {
+          text-decoration: underline;
+        }
+      }
     }
   }
 }
