--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,4 +1,3 @@
 {{ define "main" }}
-  <p>{{ i18n "loggedAs" . }} <strong>admin</strong>.</p>
-  <p>{{ i18n "404Page" . }}</p>
+  :no_entry_sign: 404 :cry:
 {{ end }}
