--- a/layouts/partials/posts_list.html
+++ b/layouts/partials/posts_list.html
@@ -4,32 +4,22 @@
   {{ else }}
     {{ i18n "postsAbout" }} {{ .Title }}
   {{ end }}
-  <div class="svg-icon baseline">
-    <a href="{{ .RSSLink | relURL }}" class="rss" title="RSS">
-      <svg aria-labelledby="simpleicons-rss-icon" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-        <title id="simpleicons-rss-icon">RSS</title>
-        <path d="M19.199 24C19.199 13.467 10.533 4.8 0 4.8V0c13.165 0 24 10.835 24 24h-4.801zM3.291 17.415c1.814 0 3.293 1.479 3.293 3.295 0 1.813-1.485 3.29-3.301 3.29C1.47 24 0 22.526 0 20.71s1.475-3.294 3.291-3.295zM15.909 24h-4.665c0-6.169-5.075-11.245-11.244-11.245V8.09c8.727 0 15.909 7.184 15.909 15.91z"/>
-      </svg>
-    </a>
-  </div>
+  <small>
+    - <a href="{{ .RSSLink | relURL }}" class="rss" title="RSS">RSS</a>
+  </small>
 </h2>
 <hr>
-
 {{ range (where .Data.Pages "Type" "posts").GroupByDate "2006" }}
-  <h2 id="{{ .Key }}">
-    <div class="svg-icon baseline">
-      <svg fill="#000000" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg">
-        <path d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"/>
-        <path d="M0 0h24v24H0z" fill="none"/>
-      </svg>
-    </div>
+  <h3 id="{{ .Key }}">
     {{ .Key }}
-  </h2>
-  <ol class="decimal-list">
+  </h3>
+  <ul class="posts-list">
     {{ range .Pages }}
       <li>
-        <a href="{{ .Permalink | relURL }}" title="{{ .Title }}">{{ .Title }}</a>
+        <span class="date">{{ .Date.Format "January 2, 2006" }}</span>
+        <a href="{{ .RelPermalink | relURL }}" title="{{ .Title }}">{{ .Title }}</a>
+        {{ if .Site.Params.displayPostLanguage }}<span class="lang">/ {{ .Lang }}</span>{{ end }}
       </li>
     {{ end }}
-  </ol>
+  </ul>
 {{ end }}
