--- a/assets/src/styles/_components/base.scss
+++ b/assets/src/styles/_components/base.scss
@@ -1,9 +1,6 @@
 html, body {
   background-color: $base-background-color;
-  color: $base-font-color;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: $base-font-size;
-  line-height: $base-line-height;
+  font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   height: 100%;
   margin: 0;
   text-rendering: optimizeLegibility;
@@ -12,13 +9,13 @@ html, body {
 body {
   display: grid;
   grid-gap: 1rem;
-  height: 100%;
-  grid-template-columns: 1fr;
   grid-template-areas: "nav" "main" "footer";
+  grid-template-columns: 1fr;
+  height: 100%;
 
-  grid-template-rows: 5rem 1fr 3rem;
+  grid-template-rows: $navbar-height 1fr 3rem;
   @media screen and (max-width: $breakpoint) {
-    grid-template-rows: 5rem 1fr 6rem;
+    grid-template-rows: $navbar-height 1fr 5rem;
   }
 
   a {
@@ -30,13 +27,6 @@ body {
     }
   }
 
-  hr {
-    border: 0;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
-    height: 0;
-  }
-
   nav {
     grid-area: nav;
   }
@@ -45,8 +35,17 @@ body {
     grid-area: main;
     justify-self: center;
     grid-column: 1 / -1;
-    max-width: 900px;
-    width: 90%;
+    max-width: 80rem !important;
+    padding-bottom: 3rem !important;
+    padding-top: 3rem !important;
+
+    &.home {
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+    }
   }
 
   footer {
