--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,12 +1,18 @@
 {{ define "main" }}
-  <div class="progress-container">
-    <div class="progress-bar"></div>
-  </div>
   <article>
     <header>
-      <time datetime="{{ .Date.Format "2006-01-02 03:04" }}">
-        {{- .Date.Format "2006-01-02" -}}
-      </time>
+      <small>
+        <time datetime="{{ .Date.Format "2006-01-02 03:04" }}">
+          {{- .Date.Format "2006-01-02" -}}
+        </time>
+        &bull;
+        {{- if .Params.categories }}
+          {{ range $index, $category := .Params.categories }}
+            {{ if gt $index 0 }}, {{ end }}
+            <a href="{{ $.LanguagePrefix }}{{ "/categories/" | relURL }}{{ . | urlize }}">{{- upper . -}}</a>
+          {{ end }}
+        {{- end -}}
+      </small>
       <h1>{{- .Title -}}</h1>
     </header>
     <section>
@@ -15,14 +21,6 @@
     <footer>
       <hr>
       <div class="meta">
-        <p class="categories">
-          {{- if .Params.categories }}
-            {{ range $index, $category := .Params.categories }}
-              {{ if gt $index 0 }}, {{ end }}
-              <a href="{{ $.LanguagePrefix }}{{ "/categories/" | relURL }}{{ . | urlize }}">{{- upper . -}}</a>
-            {{ end }}
-          {{- end -}}
-        </p>
         <p class="tags">
           {{ if .Params.tags }}
             {{ range $index, $tag := .Params.tags }}
