100% width for images

--- a/assets/src/styles/_components/content.scss
+++ b/assets/src/styles/_components/content.scss
@@ -12,6 +12,8 @@ body {
 
       section {
         figure {
+          margin: $itemMargin 0;
+
           &.full {
             left: 50%;
             margin-left: -50vw;
