Bigger margins for video and Google Adsense

--- a/assets/src/styles/_components/content.scss
+++ b/assets/src/styles/_components/content.scss
@@ -11,6 +11,11 @@ body {
       }
 
       section {
+        ins.adsbygoogle,
+        video {
+          margin: 5rem auto;
+        }
+
         figure {
           margin: $itemMargin 0;
 
